--- a/_includes/selected_papers.html
+++ b/_includes/selected_papers.html
@@ -1,5 +1,5 @@
 
           <div class="publications">
-            <h2>selected publications</h2>
+            <h2>what i'm reading</h2>
             {% bibliography -f papers -q @*[selected=true]* %}
           </div>
